# SimKit

./: .gitignore  AGENTS.md  Cargo.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: rust.yml
assets/scenarios/phase0/: basic.ron
simkit-core/: Cargo.toml
simkit-core/src/: fixed_point.rs  lib.rs  menu.rs  playback.rs  pod.rs  recordable.rs
simkit-core/src/grid/: index.rs  mod.rs
simkit-core/src/ids/: mod.rs
simkit-core/src/occupancy/: mod.rs
simkit-core/src/pathfinding/: astar.rs
simkit-core/src/simulation/: journal.rs  mod.rs
simkit-core/src/snapshot/: mod.rs
stitchlands/: Cargo.toml  task-system-design.md  vision.md
stitchlands/docs/: 1st-slice.md  architecture.md  phase0_plan.md  task-implementation-plan.md  task-system-design.md
stitchlands/src/: cli.rs  components.rs  ids.rs  invariants.rs  lib.rs  main.rs  snapshot.rs  tasks.rs  toils.rs  world.rs
stitchlands/src/environment_step/: mod.rs
stitchlands/src/model/: components.rs  ids.rs  invariants.rs  mod.rs  queries.rs  snapshot.rs
stitchlands/src/scenario/: cleanup.rs  loader.rs  mod.rs  model.rs  testutil.rs
stitchlands/src/tasks/: job_execution.rs  job_planning.rs  mod.rs  reservations.rs  task_scheduling.rs  tests.rs
stitchlands/tests/: phase0_0a.rs  phase0_0b.rs  scenario_invariants.rs
stitchlands/tests/data/: small.toml
