[package]
name = "simkit-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_ecs_tilemap = { workspace = true }
bevy_pancam = { workspace = true }
bevy_asset_loader = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }