[package]
name = "stitchlands"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
bevy_ecs_tilemap = { workspace = true }
simkit-core = { path = "../simkit-core" }
bevy_pancam = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
rand = { version = "0.8", features = ["small_rng"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ron = "0.11"
toml = "0.8"
test-log = { version = "0.2.18", features = ["trace"] }
dashmap = { workspace = true }

[dev-dependencies]
